--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -19,69 +19,104 @@
 -->
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
-    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
+<meta charset="utf-8" />
+<meta name="format-detection" content="telephone=no" />
+<meta name="msapplication-tap-highlight" content="no" />
+<!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+<meta name="viewport"
+	content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
 
-    <link href="css/themes/2/ISDemo.min.css" rel="stylesheet" />
-    <link href="css/themes/2/jquery.mobile.icons.min.css" rel="stylesheet" />
-    <link href="lib/jqm/1.4.5/jquery.mobile.structure-1.4.5.min.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/app.css" />
-    <title>IS Demo</title>
+<link href="css/themes/2/ISDemo.min.css" rel="stylesheet" />
+<link href="css/themes/2/jquery.mobile.icons.min.css" rel="stylesheet" />
+<link href="lib/jqm/1.4.5/jquery.mobile.structure-1.4.5.min.css"
+	rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="css/app.css" />
+<title>IS Demo</title>
 </head>
 <body>
-    <div data-role="page" id="page-index">
-        <div data-role="header" data-theme="c" data-position="fixed">
-            <h1>IS Demo</h1>
-        </div><!-- /header -->
-        <div role="main" class="ui-content">
-            <h2 class="mc-text-center">Welcome!</h2>
-            <a href="#page-signin" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
-            <p></p>
-        </div><!-- /content -->
-    </div><!-- /page -->
-    <div data-role="page" id="page-signin">
-        <div data-role="header" data-theme="c" data-position="fixed">
-            <a href="#page-index" data-icon="home" data-iconpos="notext" data-transition="slide" data-direction="reverse"></a>
-            <h1>IS Demo</h1>
-        </div><!-- /header -->
-        <div role="main" class="ui-content">
-            <h3>Sign In</h3>
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" value="">
-            <label for="txt-password">Password</label>
-            <input type="password" name="txt-password" id="txt-password" value="">
-            <fieldset data-role="controlgroup">
-                <input type="checkbox" name="chck-rememberme" id="chck-rememberme">
-                <label for="chck-rememberme">Remember me</label>
-            </fieldset>
-            <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
-            <div data-role="popup" id="dlg-invalid-credentials" data-dismissible="false" style="max-width:400px;">
-                <div role="main" class="ui-content">
-                    <h3 class="mc-text-danger">Login Failed</h3>
-                    <p>Please check your username and password.</p>
-                    <div class="mc-text-center"><a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
-                </div>
-            </div>
-        </div><!-- /content -->
-    </div><!-- /page -->
-	<div data-role="page" id="page-main-menu">
-    <div data-role="header" data-theme="c">
-        <h1>IS Demo</h1>
-    </div><!-- /header -->
-    <div role="main" class="ui-content">
-        <h2 class="mc-text-center">Main Menu</h2>
-    </div><!-- /content -->
-    <script type="text/javascript" src="cordova.js"></script>
-<script src="lib/fastclick/fastclick.min.js"></script>
-<script src="lib/jquery/2.1.1/jquery-2.1.1.min.js"></script>
-<script src="js/api-messages.js"></script>
-<script src="js/settings.js"></script>
-<script src="js/session.js"></script>
-<script src="js/signin-controller.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
-<script src="lib/jqm/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<div class="app">
+		<div class="event listening">Loading...</div>
+
+		<!-- /loading -->
+		<div class="event received">
+
+			<div data-role="page" id="page-index">
+				<div data-role="header" data-theme="c" data-position="fixed">
+					<h1>IS Demo</h1>
+				</div>
+				<!-- /header -->
+				<div role="main" class="ui-content">
+					<h2 class="mc-text-center">Welcome!</h2>
+					<a href="#page-signin" class="ui-btn ui-btn-b ui-corner-all">Sign
+						In</a>
+					<p></p>
+				</div>
+				<!-- /content -->
+			</div>
+			<!-- /page -->
+			<div data-role="page" id="page-signin">
+				<div data-role="header" data-theme="c" data-position="fixed">
+					<a href="#page-index" data-icon="home" data-iconpos="notext"
+						data-transition="slide" data-direction="reverse"></a>
+					<h1>IS Demo</h1>
+				</div>
+				<!-- /header -->
+				<div role="main" class="ui-content">
+					<h3>Sign In</h3>
+					<label for="username">Username</label> <input type="text"
+						name="username" id="username" value=""> <label
+						for="txt-password">Password</label> <input type="password"
+						name="txt-password" id="txt-password" value="">
+					<fieldset data-role="controlgroup">
+						<input type="checkbox" name="chck-rememberme" id="chck-rememberme">
+						<label for="chck-rememberme">Remember me</label>
+					</fieldset>
+					<a href="#dlg-invalid-credentials" data-rel="popup"
+						data-transition="pop" data-position-to="window" id="btn-submit"
+						class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+					<div data-role="popup" id="dlg-invalid-credentials"
+						data-dismissible="false" style="max-width: 400px;">
+						<div role="main" class="ui-content">
+							<h3 class="mc-text-danger">Login Failed</h3>
+							<p>Please check your username and password.</p>
+							<div class="mc-text-center">
+								<a href="#" data-rel="back"
+									class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /content -->
+			</div>
+			<!-- /page -->
+			<div data-role="page" id="page-eventlist"></div>
+			<!-- /page -->
+			<div data-role="page" id="page-eventdetails"></div>
+			<!-- /page -->
+
+
+			<div data-role="page" id="page-main-menu">
+				<div data-role="header" data-theme="c">
+					<h1>IS Demo</h1>
+				</div>
+				<!-- /header -->
+				<div role="main" class="ui-content">
+					<h2 class="mc-text-center">Main Menu</h2>
+				</div>
+				<!-- /content -->
+			</div>
+		</div>
+		<!-- /loaded -->
+	</div>
+	<!-- /app -->
+	<script type="text/javascript" src="cordova.js"></script>
+	<script src="lib/fastclick/fastclick.min.js"></script>
+	<script src="lib/jquery/2.1.1/jquery-2.1.1.min.js"></script>
+	<script src="js/api-messages.js"></script>
+	<script src="js/settings.js"></script>
+	<script src="js/session.js"></script>
+	<script src="js/signin-controller.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
+	<script src="lib/jqm/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </body>
 </html>
