--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -36,10 +36,8 @@
 <body>
 	<div class="app">
 		<div class="event listening">Loading...</div>
-
 		<!-- /loading -->
 		<div class="event received">
-
 			<div data-role="page" id="page-index">
 				<div data-role="header" data-theme="c" data-position="fixed">
 					<h1>IS Demo</h1>
@@ -97,7 +95,7 @@
 
 			<div data-role="page" id="page-main-menu">
 				<div data-role="header" data-theme="c">
-					<h1>IS Demo</h1>
+					<h1>Book It</h1>
 				</div>
 				<!-- /header -->
 				<div role="main" class="ui-content">
@@ -105,6 +103,7 @@
 				</div>
 				<!-- /content -->
 			</div>
+			<!-- /page -->
 		</div>
 		<!-- /loaded -->
 	</div>
