--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -45,8 +45,7 @@
 				<!-- /header -->
 				<div role="main" class="ui-content">
 					<h2 class="mc-text-center">Welcome!</h2>
-					<a href="#page-signin" class="ui-btn ui-btn-b ui-corner-all">Sign
-						In</a>
+					<a href="#page-signin" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
 					<p></p>
 				</div>
 				<!-- /content -->
@@ -61,8 +60,8 @@
 				<!-- /header -->
 				<div role="main" class="ui-content">
 					<h3>Sign In</h3>
-					<label for="username">Username</label> <input type="text"
-						name="username" id="username" value=""> <label
+					<label for="txt-username">Username</label> <input type="text"
+						name="txt-username" id="txt-username" value=""> <label
 						for="txt-password">Password</label> <input type="password"
 						name="txt-password" id="txt-password" value="">
 					<fieldset data-role="controlgroup">
@@ -95,7 +94,7 @@
 
 			<div data-role="page" id="page-main-menu">
 				<div data-role="header" data-theme="c">
-					<h1>Book It</h1>
+					<h1>IS Demo</h1>
 				</div>
 				<!-- /header -->
 				<div role="main" class="ui-content">
@@ -108,14 +107,14 @@
 		<!-- /loaded -->
 	</div>
 	<!-- /app -->
-	<script type="text/javascript" src="cordova.js"></script>
+	<!-- 	<script type="text/javascript" src="cordova.js"></script> -->
 	<script src="lib/fastclick/fastclick.min.js"></script>
 	<script src="lib/jquery/2.1.1/jquery-2.1.1.min.js"></script>
 	<script src="js/api-messages.js"></script>
 	<script src="js/settings.js"></script>
 	<script src="js/session.js"></script>
 	<script src="js/signin-controller.js"></script>
-	<script type="text/javascript" src="js/index.js"></script>
 	<script src="lib/jqm/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
