--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -107,7 +107,7 @@
 		<!-- /loaded -->
 	</div>
 	<!-- /app -->
-	<!-- 	<script type="text/javascript" src="cordova.js"></script> -->
+	<script type="text/javascript" src="cordova.js"></script>
 	<script src="lib/fastclick/fastclick.min.js"></script>
 	<script src="lib/jquery/2.1.1/jquery-2.1.1.min.js"></script>
 	<script src="js/api-messages.js"></script>
