changed index to show a list of buttons

--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -45,7 +45,8 @@
 				<!-- /header -->
 				<div role="main" class="ui-content">
 					<h2 class="mc-text-center">Welcome!</h2>
-					<a href="#page-signin" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
+					<a href="#page-signin" class="ui-btn ui-btn-b ui-corner-all">Sign
+						In</a>
 					<p></p>
 				</div>
 				<!-- /content -->
@@ -86,9 +87,26 @@
 				<!-- /content -->
 			</div>
 			<!-- /page -->
-			<div data-role="page" id="page-eventlist"></div>
+			<div data-role="page" id="page-eventlist">
+				<div data-role="controlgroup">
+					<a href="#page-Event1" data-role="button">Event 1</a> 
+					<a href="#page-Event2" data-role="button">Event 2</a> 
+					<a href="#page-Event3" data-role="button">Event 3</a>
+				</div>
+				<!-- /content -->
+			</div>
 			<!-- /page -->
-			<div data-role="page" id="page-eventdetails"></div>
+			<div data-role="page-Event1" id="page-eventdetails">
+				Event 1 Data
+			</div>
+			<!-- /page -->
+			<div data-role="page-Event2" id="page-eventdetails">
+				Event 2 Data
+			</div>
+			<!-- /page -->
+			<div data-role="page-Event3" id="page-eventdetails">
+				Event 3 Data
+			</div>
 			<!-- /page -->
 
 
