working on dynamicly adding list items to the main page

--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -96,15 +96,15 @@
 				<!-- /content -->
 			</div>
 			<!-- /page -->
-			<div data-role="page-Event1" id="page-eventdetails">
+			<div data-role="page" id="page-Event1">
 				Event 1 Data
 			</div>
 			<!-- /page -->
-			<div data-role="page-Event2" id="page-eventdetails">
+			<div data-role="page" id="page-Event2">
 				Event 2 Data
 			</div>
 			<!-- /page -->
-			<div data-role="page-Event3" id="page-eventdetails">
+			<div data-role="page" id="page-Event3">
 				Event 3 Data
 			</div>
 			<!-- /page -->
