--- a/src/ISDemo/www/spec.html
+++ b/src/ISDemo/www/spec.html
@@ -18,51 +18,80 @@
     under the License.
 -->
 <html>
-    <head>
-        <title>Jasmine Spec Runner</title>
+<head>
+<title>Jasmine Spec Runner</title>
 
-        <!-- jasmine source -->
-        <link rel="shortcut icon" type="image/png" href="spec/lib/jasmine-1.2.0/jasmine_favicon.png">
-        <link rel="stylesheet" type="text/css" href="spec/lib/jasmine-1.2.0/jasmine.css">
-        <script type="text/javascript" src="spec/lib/jasmine-1.2.0/jasmine.js"></script>
-        <script type="text/javascript" src="spec/lib/jasmine-1.2.0/jasmine-html.js"></script>
+<!-- jasmine source -->
+<link rel="shortcut icon" type="image/png"
+	href="spec/lib/jasmine-1.2.0/jasmine_favicon.png">
+<link rel="stylesheet" type="text/css"
+	href="spec/lib/jasmine-1.2.0/jasmine.css">
+<script type="text/javascript" src="spec/lib/jasmine-1.2.0/jasmine.js"></script>
+<script type="text/javascript"
+	src="spec/lib/jasmine-1.2.0/jasmine-html.js"></script>
 
-        <!-- include source files here... -->
-        <script type="text/javascript" src="js/index.js"></script>
+<!-- include source files here... -->
+<script type="text/javascript" src="js/index.js"></script>
 
-        <!-- include spec files here... -->
-        <script type="text/javascript" src="spec/helper.js"></script>
-        <script type="text/javascript" src="spec/index.js"></script>
+<!-- include spec files here... -->
+<script type="text/javascript" src="spec/helper.js"></script>
+<script type="text/javascript" src="spec/index.js"></script>
 
-        <script type="text/javascript">
-            (function() {
-                var jasmineEnv = jasmine.getEnv();
-                jasmineEnv.updateInterval = 1000;
+<script type="text/javascript">
+	(function() {
+		var jasmineEnv = jasmine.getEnv();
+		jasmineEnv.updateInterval = 1000;
 
-                var htmlReporter = new jasmine.HtmlReporter();
+		var htmlReporter = new jasmine.HtmlReporter();
 
-                jasmineEnv.addReporter(htmlReporter);
+		jasmineEnv.addReporter(htmlReporter);
 
-                jasmineEnv.specFilter = function(spec) {
-                    return htmlReporter.specFilter(spec);
-                };
+		jasmineEnv.specFilter = function(spec) {
+			return htmlReporter.specFilter(spec);
+		};
 
-                var currentWindowOnload = window.onload;
+		var currentWindowOnload = window.onload;
 
-                window.onload = function() {
-                    if (currentWindowOnload) {
-                        currentWindowOnload();
-                    }
-                    execJasmine();
-                };
+		window.onload = function() {
+			if (currentWindowOnload) {
+				currentWindowOnload();
+			}
+			execJasmine();
+		};
 
-                function execJasmine() {
-                    jasmineEnv.execute();
-                }
-            })();
-        </script>
-    </head>
-    <body>
-        <div id="stage" style="display:none;"></div>
-    </body>
+		function execJasmine() {
+			jasmineEnv.execute();
+		}
+	})();
+</script>
+</head>
+<body>
+	<div id="stage" style="display: none;"></div>
+</body>
 </html>
+<?xml version='1.0' encoding='UTF-8'?>
+<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"
+	xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd">
+	<soap:Header>
+		<wsse:Security
+			xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
+			xmlns="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
+			xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"
+			soap:mustUnderstand="1">
+			<wsse:UsernameToken
+				xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
+				xmlns="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd">
+				<wsse:Username>E603178</wsse:Username>
+				<wsse:Password
+					Type="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#PasswordText">UCBSN9!7</wsse:Password>
+			</wsse:UsernameToken>
+		</wsse:Security>
+	</soap:Header>
+	<soap:Body
+		xmlns:ns1="http://xmlns.oracle.com/bpel/mobile/Notificationlist">
+		<ns1:NotificationlistRetrievalREQ>
+			<ns1:NotificationlistType>Human-Offer</ns1:NotificationlistType>
+			<ns1:Status>TODO</ns1:Status>
+		</ns1:NotificationlistRetrievalREQ>
+	</soap:Body>
+</soap:Envelope>
