--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -126,6 +126,7 @@
 	<script type="text/javascript" src="cordova.js"></script>
 	<script src="lib/fastclick/fastclick.min.js"></script>
 	<script src="lib/jquery/2.1.1/jquery-2.1.1.min.js"></script>
+	<script src="lib/jquery/jquery.soap.js"></script>
 	<script src="js/api-messages.js"></script>
 	<script src="js/settings.js"></script>
 	<script src="js/session.js"></script>
