fixed dynamic lists soap calls still replaced with dummy data

--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -88,8 +88,9 @@
 			</div>
 			<!-- /page -->
 			<div data-role="page" id="page-eventlist">
-				<div data-role="list" data-id="event-list">
-				</div>
+				 <ul data-role="listview"  id="event-list" data-theme="a">
+                
+            </ul>
 				<!-- /content -->
 			</div>
 			<!-- /page -->
@@ -108,16 +109,16 @@
 			<!-- /page -->
 
 
-			<div data-role="page" id="page-main-menu">
-				<div data-role="header" data-theme="c">
-					<h1>IS Demo</h1>
-				</div>
-				<!-- /header -->
-				<div role="main" class="ui-content">
-					<h2 class="mc-text-center">Main Menu</h2>
-				</div>
-				<!-- /content -->
-			</div>
+<!-- 			<div data-role="page" id="page-main-menu"> -->
+<!-- 				<div data-role="header" data-theme="c"> -->
+<!-- 					<h1>IS Demo</h1> -->
+<!-- 				</div> -->
+<!-- 				/header -->
+<!-- 				<div role="main" class="ui-content"> -->
+<!-- 					<h2 class="mc-text-center">Main Menu</h2> -->
+<!-- 				</div> -->
+<!-- 				/content -->
+<!-- 			</div> -->
 			<!-- /page -->
 		</div>
 		<!-- /loaded -->
