application working in browser, not yet in phonegap https ajax calls failing

--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -88,6 +88,9 @@
 			</div>
 			<!-- /page -->
 			<div data-role="page" id="page-eventlist">
+				<div data-theme="a" data-role="header">
+					<h3>My Events</h3>
+				</div>
 				 <ul data-role="listview"  id="event-list" data-theme="a">
                 
             </ul>
