--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -141,5 +141,10 @@ content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1,
 	<script src="js/signin-controller.js"></script>
 	<script src="lib/jqm/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript">
+	$.support.cors = true;
+	$.mobile.allowCrossDomainPages = true;	
+	
+	</script>
 </body>
 </html>
