--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -27,7 +27,7 @@
 <!-- 	content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" /> -->
 <meta name="viewport" 
 content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, target-densitydpi=medium-dpi" />
-
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; connect-src https://webmessaging-test.ucb.com">
 
 
 <link href="css/themes/2/ISDemo.min.css" rel="stylesheet" />
