--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -27,7 +27,8 @@
 <!-- 	content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" /> -->
 <meta name="viewport" 
 content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, target-densitydpi=medium-dpi" />
-<meta http-equiv="Content-Security-Policy" content="default-src *; script-src * 'unsafe-eval' 'unsafe-inline'; connect-src *; img-src *; style-src * 'unsafe-inline' ; media-src *;">
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+
 
 <link href="css/themes/2/ISDemo.min.css" rel="stylesheet" />
 <link href="css/themes/2/jquery.mobile.icons.min.css" rel="stylesheet" />
