--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -28,11 +28,10 @@
 <meta name="viewport" 
 content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, target-densitydpi=medium-dpi" />
 <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"> -->
-<meta http-equiv="Content-Security-Policy" 
-         content="connect-src *;
-         		  default-src *; 
-                  style-src * 'self' 'unsafe-inline' 'unsafe-eval'; 
-                  script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
+<meta http-equiv="Content-Security-Policy"
+      content="default-src *; 
+               style-src * 'self' 'unsafe-inline' 'unsafe-eval'; 
+               script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
 
 <link href="css/themes/2/ISDemo.min.css" rel="stylesheet" />
 <link href="css/themes/2/jquery.mobile.icons.min.css" rel="stylesheet" />
