--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -29,7 +29,7 @@
 content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, target-densitydpi=medium-dpi" />
 <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"> -->
 <meta http-equiv="Content-Security-Policy"
-      content="default-src *; 
+      content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'; 
                style-src * 'self' 'unsafe-inline' 'unsafe-eval'; 
                script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
 
