--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -76,7 +76,7 @@ content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1,
 						<input type="checkbox" name="chck-rememberme" id="chck-rememberme">
 						<label for="chck-rememberme">Remember me</label>
 					</fieldset>
-					<a href="#dlg-invalid-credentials" data-rel="popup"
+					<a href="#" data-rel="popup"
 						data-transition="pop" data-position-to="window" id="btn-submit"
 						class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
 					<div data-role="popup" id="dlg-invalid-credentials"
