--- a/src/ISDemo/www/index.html
+++ b/src/ISDemo/www/index.html
@@ -96,6 +96,8 @@ content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1,
 			<!-- /page -->
 			<div data-role="page" id="page-eventlist">
 				<div data-theme="a" data-role="header">
+				<a href="#page-signin" id="#logout-button" class="ui-btn-left" data-transition="slide"
+						data-direction="reverse">logout</a>
 					<h3>My Events</h3>
 				</div>
 				 <ul data-role="listview"  id="event-list" data-theme="a">
